Fixed issues with tree-selector component hiding parts of the modal contents for collections on small screens.

--- a/projects/laji/src/app/shared-modules/tree-select/tree-select.component.scss
+++ b/projects/laji/src/app/shared-modules/tree-select/tree-select.component.scss
@@ -1,10 +1,10 @@
-$mobileBreakpoint: 1080px;
+$mdBreakpoint: 992px;
 
 ::ng-deep .tree-select-modal-content {
   display: flex;
   flex-direction: column;
   max-height: calc(100% - 30px);
-  @media only screen and (max-width: $mobileBreakpoint) {
+  @media only screen and (max-width: $mdBreakpoint) {
     max-height: none;
   }
 }
